[package]
name = "ra-fsp-rs"
version.workspace = true
edition = "2024"
description = "Rust HAL for Renesas RA microcontrollers using FSP (Flexible Software Package)"
authors = ["Oleksandr Babak <alexanderbabak@proton.me>"]
keywords = ["no-std", "embedded", "hal", "renesas", "fsp"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ddystopia/ra"
readme = "README.md"

[dependencies]
ra-fsp-sys.workspace = true
cortex-m = { version = "0.7.7", default-features = false }
log = { version = "0.4.27", default-features = false, optional = true }
ra6m3-pac = { workspace = true, optional = true, features = ["rt"] }

[features]
default = ["log"]

log = ["dep:log"]

mod-r_dmac = ["ra-fsp-sys/mod-r_dmac"]
mod-r_elc = ["ra-fsp-sys/mod-r_elc"]

mod-r_flash_hp = ["ra-fsp-sys/mod-r_flash_hp"]

mod-r_icu = ["ra-fsp-sys/mod-r_icu"]
mod-r_ioport = ["ra-fsp-sys/mod-r_ioport"]
mod-r_ether = ["ra-fsp-sys/mod-r_ether"]
mod-r_ether_phy = ["ra-fsp-sys/mod-r_ether_phy"]
mod-r_ether_phy_target_ics1894 = ["ra-fsp-sys/mod-r_ether_phy_target_ics1894"]
mod-r_ether_phy_target_ksz8091rnb = ["ra-fsp-sys/mod-r_ether_phy_target_ksz8091rnb"]
mod-r_ether_phy_target_ksz8041 = ["ra-fsp-sys/mod-r_ether_phy_target_ksz8041"]
mod-r_ether_phy_target_dp83620 = ["ra-fsp-sys/mod-r_ether_phy_target_dp83620"]

ra0e1 = []
ra2a1 = []
ra2a2 = []
ra2e1 = []
ra2e2 = []
ra2e3 = []
ra2l1 = []
ra4e1 = []
ra4e2 = []
ra4m1 = []
ra4m2 = []
ra4m3 = []
ra4t1 = []
ra4w1 = []
ra6e1 = []
ra6e2 = []
ra6m1 = []
ra6m2 = []
ra6m3 = ["ra-fsp-sys/ra6m3", "dep:ra6m3-pac"]
ra6m4 = []
ra6m5 = []
ra6t1 = []
ra6t2 = []
ra6t3 = []
ra8m1 = []
ra8d1 = []
ra8t1 = []
